@@ -43,14 +43,16 @@
 #define NORMAL_FONT_HIGHT 30
 
 #define MAX_LINE_HIGHT 50
-#define MIN_LINE_HIGHT 10
+#define MIN_LINE_HIGHT 20
 
 /* FIXME: this is in pixel convert to 1/1000 ? */
 #define MIN_DISTANCE_BETWEEN_LINES 5
 #define MIN_DISTANCE_BETWEEN_WORDS 10
 
 /* in 1/1000 cover units */
-#define NOT_IN_A_LINE 10
+#define NOT_IN_A_LINE 33
+#define IN_A_LINE 62
+
 #define NOT_IN_A_FONT 30
 
 #define SHORT_FONT 900
